translation-tool/inputs/source_meta/objects/Plans_in_Package__c.object
<CustomObject>
    <fields>
        <fullName>Class_A_ID__c</fullName>
        <formula>Package__r.Package_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class A ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_ID__c</fullName>
        <formula>Package__r.Package_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <formula>Package__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Plans in Packages</relationshipLabel>
        <relationshipName>Plans_in_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Path_Package__c</fullName>
        <formula>Package__r.Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Path (Package)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Plans in Packages</relationshipLabel>
        <relationshipName>Plans_in_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <formula>Package__r.Program_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Package__r.Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <label>Plans in Package</label>
    <nameField>
        <displayFormat>PAC-{000000}</displayFormat>
        <label>Plans in Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans in Packages</pluralLabel>
    <recordTypes>
        <fullName>FOSS</fullName>
        <active>true</active>
        <label>FOSS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>